modift index.html

--- a/index.html
+++ b/index.html
@@ -5,15 +5,8 @@
         <title>My HTML exercises</title>
     </head>
     <body>
-        <h1>My HTML exercises</h1>
-        <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My HTML Exercises</title>
-</head>
-<body>
-    <h1>My HTML Exercises</h1>
+    <h1>My HTML Practice Projects</h1>
+    <p>Here is a collection of my HTML exercises and small projects. Click any link below to view them.</p>
     <ul>
         <li><a href="bookstore.html">Bookstore</a></li>
         <li><a href="recipe.html">Recipe</a></li>
